--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<html>
-  <body>
-    <p>hello world</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anne's World</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <h1>Hello World</h1>
+</body>
+
 </html>
